--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         
-        <form method="POST" action="/tweets/">
+        <form id="newTweetForm">
           <div class="textarea-container">
             <label for="tweet-text">What are you humming about?</label>
             <textarea name="text" id="tweet-text"></textarea>
