Update name within header for aside block

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
         </div>
        
         <div>
-          <h2>Your Name</h2>
+          <h2>Akshatha Kulkarni</h2>
         </div>
       </aside>
       <div class="container">
